5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1635_869.log
== TEST (2019-04-08 15:50:34) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código
nota= float(input("Nota do aluno:"))
bonificacao= input("Aluno recebe bonificacao( S / N)?:")
if(((bonificacao.upper() == "S")) or (bonificao.upper() == "N") and ((nota >= 0.0 and nota <=10.0))
	if(bonificacao.upper( == "S"):
		print(nota + ((nota * 10) / 100))
	else:
		print(nota)
else:
	print("Nota ou bonificacao inavlidos")
-- ERROR:
File "XXXX", line 7
    if(bonificacao.upper( == "S"):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:50:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código
nota= float(input("Nota do aluno:"))
bonificacao= input("Aluno recebe bonificacao( S / N)?:")
if(((bonificacao.upper() == "S")) or (bonificao.upper() == "N") and ((nota >= 0.0 and nota <=10.0))
	if(bonificacao.upper() == "S"):
		print(nota + ((nota * 10) / 100))
	else:
		print(nota)
else:
	print("Nota ou bonificacao inavlidos")
-- ERROR:
File "XXXX", line 7
    if(bonificacao.upper() == "S"):
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:07:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código
nota= float(input("Nota do aluno:"))
bonificacao= input("Aluno recebe bonificacao( S / N)?:")
if(((bonificacao.upper() == "S")) or (bonificao.upper() == "N") and ((nota >= 0.0 and nota <=10.0))
	if(bonificacao.upper() == "S"):
		print(nota + ((nota * 10) / 100))
	else:
		print(nota)
else:
	print("Nota ou bonificacao inavlidos")
-- EXECUTION TIME:
0.166805
-- ERROR:
  File "/home/codebench/codes/1635/869/main.py", line 7
    if(bonificacao.upper() == "S"):
                                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:08:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código
nota= float(input("Nota do aluno:"))
bonificacao= input("Aluno recebe bonificacao( S / N)?:")
if(((bonificacao.upper() == "S")) or (bonificao.upper() == "N") and ((nota >= 0.0 and nota <=10.0))
	if(bonificacao.upper() == "S"):
		print(nota + ((nota * 10) / 100))
	else:
		print(nota)
else:
	print("Nota ou bonificacao inavlidos")
-- ERROR:
File "XXXX", line 7
    if(bonificacao.upper() == "S"):
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:14:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código
var= input("Valor da compra?")

if (var > 200):
	mensagem= ((200/100)*5
else:
	mensagem= Valor total:
				  
print(mensagem)
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:15:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código
var= input("Valor da compra?")

if (var > 200):
	mensagem= ((200/100)*5
else:
	mensagem= Valor total:
				  
print(mensagem)
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:15:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código
var= input("Valor da compra?")

if (var > 200):
	mensagem= ((200/100)*5
else (var=<200):
	mensagem= Valor total:
				  
print(mensagem)
-- ERROR:
File "XXXX", line 8
    else (var=<200):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:15:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código
var= input("Valor da compra?")

if (var > 200):
	mensagem= ((200/100)*5
else:
	mensagem= Valor total:
				  
print(mensagem)
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:15:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código
var= input("Valor da compra?")

	if (var > 200):
		mensagem= ((200/100)*5
	else:
		mensagem= Valor total:
				  
print(mensagem)
-- ERROR:
File "XXXX", line 6
    if (var > 200):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:15:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código
var= input("Valor da compra?")

if (var > 200):
		mensagem= ((200/100)*5
	else:
		mensagem= Valor total:
				  
print(mensagem)
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:15:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código
var= input("Valor da compra?")

if (var > 200):
		mensagem= ((200/100)*5
else:
		mensagem= Valor total:
				  
print(mensagem)
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:16:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código
var= input("Valor da compra?")

if (var > 200):
		mensagem= ((200/100)*5
else:
		mensagem= Valor total:
				  
print(round(mensagem, 2)
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:17:13) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código
x= float(input("Valor da compra?"))

if (x > 200):
		mensagem= ((200/100)*5
else:
		mensagem= Valor total:
				  
print(round(mensagem, 2)
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:19:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código
x= float(input("Valor da compra?"))

if (x >= 200):
		mensagem= (x-(x/100)*5)
else:
		mensagem= x
				  
print(round(mensagem, 2)
-- EXECUTION TIME:
0.133116
-- ERROR:
  File "/home/codebench/codes/1635/869/main.py", line 12
    
                            ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:19:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código
x= float(input("Valor da compra?"))

if (x >= 200):
		mensagem= (x-(x/100)*5)
else:
		mensagem= x
				  
print(round(mensagem, 2)
-- ERROR:
File "XXXX", line 12
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:23:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código
x= float(input("Valor da compra?"))

if (x >= 200):
		mensagem= x-(x * 5/100)
else:
		mensagem= x
				  
print(round(mensagem, 2)
-- ERROR:
File "XXXX", line 12
    
                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:23:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código
x= float(input("Valor da compra?"))

if (x >= 200):
		k= x-(x * 5/100)
else:
		k= x
				  
print(round(k, 2)
-- ERROR:
File "XXXX", line 12
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:24:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código
x= float(input("Valor da compra?"))

if (x >= 200):
		k= x-(x * 5/100)
else:
		k= x
print(round(k, 2)
-- EXECUTION TIME:
0.143618
-- ERROR:
  File "/home/codebench/codes/1635/869/main.py", line 11
    
                     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:24:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código
x= float(input("Valor da compra?"))

if (x >= 200):
		k= x-(x * 5/100)
else:
		k= x
print(round(k, 2)
-- ERROR:
File "XXXX", line 11
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:27:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código
x= float(input("Valor da compra?"))

if (x >= 200):
		k= x-(x * 5/100)
else:
		k= x
print(round(k, 2)
-- ERROR:
File "XXXX", line 11
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:27:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código
x= float(input("Valor da compra?"))

if (x >= 200):
		k= x-(x * 5/100)
else:
		k= x
print(round(k, 2)
		
-- ERROR:
File "XXXX", line 12
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:27:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código
x= float(input("Valor da compra?"))

if (x >= 200):
	k= x-(x * 5/100)
else:
	k= x
print(round(k, 2)
-- ERROR:
File "XXXX", line 11
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:30:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código
x= float(input("Valor da compra?"))

if (x >= 200):
	k= (x-(x*5/100))
else:
	k= x
print(round(k, x))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(round(k, x))
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:30:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código
x= float(input("Valor da compra?"))

if (x >= 200):
	k= (x-(x*5/100))
else:
	k= x
print(float(round(k, x)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print(float(round(k, x)))
TypeError: 'float' object cannot be interpreted as an integer
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:31:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código
x= float(input("Valor da compra?"))

if (x >= 200):
	k= (x-(x*5/100))
else:
	k= x
print(round(k, 2))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:31:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código
x= float(input("Valor da compra?"))

if (x >= 200):
	k= (x-(x*5/100))
else:
	k= x
print(round(k, 2))
-- EXECUTION TIME:
0.135105
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
